Wed Nov 26 15:32:06 2014  Koichi Sasada  <ko1@atdot.net>

	* compile.c (iseq_set_sequence): use "nop" insn instead of
	  "jump to next insn".
	  https://bugs.ruby-lang.org/issues/8543#change-50085

Wed Nov 26 11:01:35 2014  Eric Wong  <e@80x24.org>

	* iseq.c (iseq_s_compile_file): close IO when done

Wed Nov 26 06:06:23 2014  Tanaka Akira  <akr@fsij.org>

	* common.mk: encdb.h and transdb.h depends on $(PREP).
	  So prebuild files for them in tarball are useless.

Wed Nov 26 02:08:44 2014  Tanaka Akira  <akr@fsij.org>

	* tool/make-snapshot: Don't generate enc/trans/newline.c in tarball.

Wed Nov 26 00:41:44 2014  Tanaka Akira  <akr@fsij.org>

	* common.mk (prereq): Don't depends on prelude.c and golf_prelude.c.
	  Since they depend on $(PREP) which is miniruby, they are rebuilt
	  after miniruby is built, even if tarball contains them.

Wed Nov 26 00:20:48 2014  Tanaka Akira  <akr@fsij.org>

	* template/prelude.c.tmpl: Don't expand RbConfig::Config[...].
	  It is not used now.

	* common.mk: prelude.c and golf_prelude.c doesn't depend on rbconfig.

Tue Nov 25 17:07:06 2014  Koichi Sasada  <ko1@atdot.net>

	* NEWS: add an "Implementation changes" section.

Tue Nov 25 16:09:28 2014  Eric Hodel  <drbrain@segment7.net>

	* lib/net/http.rb:  Do not attempt SSL session resumption when the
	  session is expired.  [Bug #10533]

Tue Nov 25 15:59:46 2014  Eric Hodel  <drbrain@segment7.net>

	* lib/rake:  Update to rake 10.4.0
	* test/rake:  ditto.
	* NEWS:  ditto.

	* test/lib/minitest/unit.rb:  Add compatibility shim for minitest 5.
	  This only provides minitest 5 unit test naming compatibility.

Tue Nov 25 15:26:33 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/vcs.rb (get_revisions): use Time.new instead of Time.mktime
	  which does not accept UTC offset, and offset manually for older
	  versions than 1.9.

Tue Nov 25 12:14:43 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (Init_process): initialize static IDs before constant