@@ -1,3 +1,9 @@
+Wed Nov 26 17:25:45 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* parse.y (f_label, f_kw, formal_argument_gen): ignore invalid
+	  formal argument in keyword argument definition.
+	  [ruby-dev:48742] [Bug #10545]
+
 Wed Nov 26 15:32:06 2014  Koichi Sasada  <ko1@atdot.net>
 
 	* compile.c (iseq_set_sequence): use "nop" insn instead of
